--- a/Views/venue.cshtml
+++ b/Views/venue.cshtml
@@ -12,6 +12,8 @@
     <div class="row">
       <div class="col-md-12">
         <h3>@Model["venue"].GetName()</h3>
+        <p><a href='/venue/@Model["venue"].GetId()/edit'>Edit this venue.</a></p>
+        <hr>
         @if(Model["venueBands"].Count > 0)
         {
           <h4>These bands have played at this venue:</h4>
