add database script files and style adjustments

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Band Venue Tracker</title>
     <link href="/Content/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="/Content/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/Content/css/styles.css">
   </head>
   <body>
     @RenderBody()
