--- a/Views/new-venue-form.cshtml
+++ b/Views/new-venue-form.cshtml
@@ -6,7 +6,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1>Band Tracker</h1>
+        <div class="well">
+          <h1>Band Tracker</h1>
+        </div>
       </div>
     </div>
     <div class="row">
@@ -15,9 +17,9 @@
         <form action="/venue/new" method="post">
           <div class="form-group">
             <label for="venueName">Venue name:</label>
-            <input type="text" name="venueName">
+            <input type="text" name="venueName" required>
           </div>
-          <button type="submit">Create Venue</button>
+          <button type="submit" class="btn btn-primary">Create Venue</button>
         </form>
         <hr>
         <p><a href="/">Homepage</a></p>
