--- a/Views/saved.cshtml
+++ b/Views/saved.cshtml
@@ -6,7 +6,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1>Band Tracker</h1>
+        <div class="well">
+          <h1>Band Tracker</h1>
+        </div>
       </div>
     </div>
     <div class="row">
